orchestrators/openshift/templates/server/db-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aqua-db
  labels:
    app: aqua-db
spec:
  template:
    metadata:
      labels:
        app: aqua-db
      name: aqua-db
    spec:
      serviceAccount: aqua-sa
      containers:
      - name: aqua-db
        image: registry.aquasec.com/database:4.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-db
        ports:
        - containerPort: 5432
          protocol: TCP
      volumes:
        - name: postgres-db
          hostPath:
            path: /var/lib/aqua/db
