orchestrators/openshift/templates/server/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aqua-web
  name: aqua-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aqua-web
  template:
    metadata:
      labels:
        app: aqua-web
      name: aqua-web
    spec:
# remove the comments from the following lines:
#     securityContext:
#         runAsUser: 431
#         runAsGroup: 433
#         fsGroup: 433
      serviceAccount: aqua-sa
      restartPolicy: Always
      containers:
      - env:
        - name: SCALOCK_DBUSER
          value: postgres
        - name: SCALOCK_DBPASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: aqua-db
        - name: SCALOCK_DBNAME
          value: scalock
        - name: SCALOCK_DBHOST
          value: aqua-db
        - name: SCALOCK_DBPORT
          value: "5432"
        - name: SCALOCK_AUDIT_DBUSER
          value: postgres
        - name: SCALOCK_AUDIT_DBPASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: aqua-db
        - name: SCALOCK_AUDIT_DBNAME
          value: slk_audit
        - name: SCALOCK_AUDIT_DBHOST
          value: aqua-db
        - name: SCALOCK_AUDIT_DBPORT
          value: "5432"
        # To use SSL for communication between Aqua & Kubernetes, uncomment env variables
        # SEDOCK_CERT_PEM & SEDOCK_KEY_PEM in deployment.spec.template.spec.containers
        # field as applicable, comment same if incase not used and it was uncommented
        #- name: SEDOCK_CERT_PEM
        #  value: "/opt/certs/cert.pem"
        #- name: SEDOCK_KEY_PEM
        #  value: "/opt/certs/key.pem"
        image: registry.aquasec.com/console:4.6
        imagePullPolicy: IfNotPresent
        name: aqua-web
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/aquasec/raw-scan-results
          name: aqua-web-pvc
        - mountPath: /var/run/docker.sock
          name: docker-socket-mount
        # To use SSL for communication between Aqua & Kubernetes, uncomment
        # deployment.spec.template.spec.volumeMounts[name: aqua-key] field as applicable,
        # comment same if incase not used and it was uncommented
        #- name: aqua-key
        #  mountPath: "/opt/certs"
        #  readOnly: true
      volumes:
      - hostPath:
          path: /var/run/docker.sock
        name: docker-socket-mount
      - name: aqua-web-pvc
        persistentVolumeClaim:
          claimName: aqua-web-pvc
      # To use SSL for communication between Aqua & Kubernetes, uncomment
      # deployment.spec.template.spec.volumes[name: aqua-key] field as applicable,
      # comment same if incase not used and it was uncommented
      #- name: aqua-key
      #  secret:
      #    secretName: aqua-ssl-key
