orchestrators/openshift/templates/server/server-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: aqua-web
spec:
  to:
    kind: Service
    name: aqua-web
  port:
    targetPort: 8080
